# firdian-corp

./: docker-compose.yml  main.py  pyproject.toml
agentic/: chat.py  chat_checkpoint.py  chat_v2.py
core/: coding_agent.py  general_agent.py  general_agent_v2.py  math_agent.py  persona_agent.py  text.py  weather_agent.py
models/: bookings.py  model.py  product_model.py  user_model.py
rag/: chat.py  index.py
rag/client/: rq_client.py
rag/queues/: worker.py
server/: main.py
tools/: cmd.py  weather.py
utils/: agent_memory.py  async_http_client.py  asynchronous.py  background_workers.py  concurrent.py  gil_multiprocess.py  gil_mutex.py  http_clients.py  multiprocess.py  process_async.py  process_value.py  processing_queues.py  thread_sync.py  tokenizer.py
