[project]
name = "firdian-corp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "google-genai>=1.73.1",
    "openai>=2.32.0",
    "pydantic>=2.13.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "tiktoken>=0.12.0",
]
